--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <img class="bear" src="img/hi.gif" alt="">
 
         <h3 class="follow">Follow me!</h3>
+        
+        <a  href="https://github.com/Yairix" target="_blank" rel="noopener"> <img class="iconn" src="img/gh-white.png" alt="icon github"></a>
+    
     </div>
 </body>
 </html>
